--- a/playbooks/004-install-metallb.yml
+++ b/playbooks/004-install-metallb.yml
@@ -49,16 +49,16 @@
           apiVersion: metallb.io/v1beta1
           kind: IPAddressPool
           metadata:
-            name: rancher-pool
+            name: services-pool
             namespace: metallb-system
           spec:
             addresses:
-              - {{ metallb_ip }}/32
+              - 192.168.178.202-192.168.178.203       
           ---
           apiVersion: metallb.io/v1beta1
           kind: L2Advertisement
           metadata:
-            name: rancher-announce
+            name: services-announce
             namespace: metallb-system
 
 
