--- a/playbooks/007-install-grafana.yml
+++ b/playbooks/007-install-grafana.yml
@@ -18,31 +18,16 @@
       command: helm repo update
       changed_when: true
 
-    - name: Deploy Grafana with VictoriaMetrics datasource
+    - name: Copy grafana.yaml file over
       copy:
-        dest: /tmp/grafana-values.yaml
-        content: |
-          adminUser: admin
-          adminPassword: admin
-          service:
-            type: LoadBalancer
-            loadBalancerIP: 192.168.178.203
-          datasources:
-            datasources.yaml:
-              apiVersion: 1
-              datasources:
-                - name: VictoriaMetrics
-                  type: prometheus
-                  access: proxy
-                  url: http://vm-metrics.vm-operator.svc/select/0/prometheus
-                  isDefault: true
-
+        src: grafana.yaml
+        dest: /tmp/grafana.yaml
 
     - name: Install Grafana via Helm
       command: >
         helm upgrade --install grafana grafana/grafana
         -n monitoring
-        -f /tmp/grafana-values.yaml
+        -f /tmp/grafana.yaml
       changed_when: true
 
     - name: Show Grafana access info
